[gd_scene load_steps=28 format=3 uid="uid://dqbnvl0dsqfbf"]

[ext_resource type="Script" uid="uid://ccfxru0epcjrl" path="res://scripts/maps/tienda_mapa_1.gd" id="1_3dx7i"]
[ext_resource type="Script" uid="uid://5rnf247xyu5v" path="res://scripts/scene_creator_tool.gd" id="2_hkoaw"]
[ext_resource type="Script" uid="uid://47r7xyodgbvr" path="res://scripts/parallax_background_layer.gd" id="3_ru1gk"]
[ext_resource type="Script" uid="uid://d4gnu0ogw3rcy" path="res://scripts/background_layer.gd" id="4_75105"]
[ext_resource type="Texture2D" uid="uid://dm5d7hy6aqf1e" path="res://assets/backgrounds/tienda_mapa_1/FONDOTIENDA.png" id="5_6s6pe"]
[ext_resource type="PackedScene" uid="uid://cc852y6dvkcdr" path="res://scenes/playable_character.tscn" id="6_0aayw"]
[ext_resource type="Script" uid="uid://bsvp6e76bx107" path="res://scripts/scene_changer.gd" id="6_hkoaw"]
[ext_resource type="Script" uid="uid://g7sf10k2338d" path="res://scripts/npc_layer.gd" id="9_qvg6y"]
[ext_resource type="Script" uid="uid://dsfklbei7r5qc" path="res://scripts/object_layer.gd" id="10_uwlx5"]
[ext_resource type="Script" uid="uid://ck4xyxoy5fldl" path="res://scripts/enemies_layer.gd" id="11_ste32"]
[ext_resource type="Script" uid="uid://cv43fprb0dski" path="res://scripts/spawns_layer.gd" id="12_6gu64"]
[ext_resource type="PackedScene" uid="uid://clmbh4jnxur05" path="res://scenes/objeto.tscn" id="12_a386o"]
[ext_resource type="Texture2D" uid="uid://dt5o7hw275g6n" path="res://assets/objects/tienda_mapa_1/MAQUINAS.png" id="13_5msxr"]
[ext_resource type="Script" uid="uid://c2d2peg3ovb8n" path="res://scripts/saves_layer.gd" id="13_6ilwc"]
[ext_resource type="PackedScene" uid="uid://ci5a44r0l16fy" path="res://scenes/pause_menu.tscn" id="14_0l4aq"]
[ext_resource type="Texture2D" uid="uid://bvuomc47g4q6j" path="res://assets/objects/tienda_mapa_1/MESA.png" id="14_qvg6y"]
[ext_resource type="Texture2D" uid="uid://bex0bpv8soob0" path="res://assets/objects/tienda_mapa_1/MOSTRADOR.png" id="15_uwlx5"]
[ext_resource type="PackedScene" uid="uid://byctl1vrnbctx" path="res://scenes/settings_menu.tscn" id="16_gr4pc"]
[ext_resource type="Texture2D" uid="uid://8lsbc85pvpet" path="res://assets/objects/tienda_mapa_1/REFRIS.png" id="16_ste32"]
[ext_resource type="PackedScene" uid="uid://b0jlkrvs3qm3j" path="res://scenes/notification_center.tscn" id="18_nx65v"]
[ext_resource type="PackedScene" uid="uid://dqi4bw7t4w0u8" path="res://scenes/add_new_character_animation.tscn" id="20_ucrcn"]
[ext_resource type="PackedScene" uid="uid://c0reubx1neuon" path="res://scenes/add_new_item_animation.tscn" id="22_vlyug"]
[ext_resource type="PackedScene" uid="uid://bdm55ulfce5x4" path="res://scenes/black_rect.tscn" id="24_0u5lt"]
[ext_resource type="PackedScene" uid="uid://da60fhf2hpt08" path="res://scenes/camera_manager.tscn" id="25_sgy6q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkoaw"]
size = Vector2(445, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gu64"]
size = Vector2(684, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2kmg"]
size = Vector2(3241, 2148)

[node name="TiendaMapa1" type="Node2D" node_paths=PackedStringArray("audio_stream_player", "black_rect")]
y_sort_enabled = true
script = ExtResource("1_3dx7i")
current_scene = "res://scenes/maps/tienda_mapa_1.tscn"
audio_stream_player = NodePath("AudioStreamPlayer")
black_rect = NodePath("CanvasLayer/BlackRect")

[node name="SceneCreatorTool" type="Node" parent="."]
script = ExtResource("2_hkoaw")
metadata/_custom_type_script = "uid://5rnf247xyu5v"

[node name="ParallaxBackgroundLayer" type="Node2D" parent="."]
z_index = -1
script = ExtResource("3_ru1gk")

[node name="BackgroundLayer" type="Node2D" parent="."]
z_index = -1
script = ExtResource("4_75105")

[node name="Fondotienda" type="Sprite2D" parent="BackgroundLayer"]
texture = ExtResource("5_6s6pe")

[node name="SceneChanger" type="Area2D" parent="BackgroundLayer" node_paths=PackedStringArray("black_rect")]
position = Vector2(-311, 784)
script = ExtResource("6_hkoaw")
target_scene = "res://scenes/maps/mapa_1.tscn"
target_marker = "EntradaTiendaMapa1"
black_rect = NodePath("../../CanvasLayer/BlackRect")
metadata/_custom_type_script = "uid://bsvp6e76bx107"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackgroundLayer/SceneChanger"]
position = Vector2(-4.5, 56)
shape = SubResource("RectangleShape2D_hkoaw")

[node name="StaticBody2D" type="StaticBody2D" parent="BackgroundLayer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BackgroundLayer/StaticBody2D"]
polygon = PackedVector2Array(-1002, 808, -501, 123, 527, 119, 1003, 829, 1254, 837, 1245, -528, -1027, -533)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="BackgroundLayer/StaticBody2D"]
polygon = PackedVector2Array(-551, 821, -480, 850, -167, 854, -83, 808, 1082, 800, 1174, 975, -1219, 984, -1123, 796)

[node name="PlayableCharacter" parent="." instance=ExtResource("6_0aayw")]

[node name="NpcLayer" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("9_qvg6y")

[node name="ObjectLayer" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("10_uwlx5")

[node name="Maquinas" parent="ObjectLayer" instance=ExtResource("12_a386o")]
position = Vector2(689, 242)

[node name="Sprite2D" parent="ObjectLayer/Maquinas" index="0"]
texture = ExtResource("13_5msxr")
offset = Vector2(0, -52)

[node name="CollisionPolygon2D" parent="ObjectLayer/Maquinas/StaticBody2D" index="1"]
polygon = PackedVector2Array(112, 469, -275, -13, -131, -63, -142, -458, 310, -420, 306, 457)

[node name="Mesa" parent="ObjectLayer" instance=ExtResource("12_a386o")]
position = Vector2(455, 823)

[node name="Sprite2D" parent="ObjectLayer/Mesa" index="0"]
texture = ExtResource("14_qvg6y")
offset = Vector2(0, -248)

[node name="CollisionPolygon2D" parent="ObjectLayer/Mesa/StaticBody2D" index="1"]
polygon = PackedVector2Array(-547, 9, -535, -90, 543, -121, 543, 1)

[node name="Mostrador" parent="ObjectLayer" instance=ExtResource("12_a386o")]
position = Vector2(-72, 197)

[node name="Sprite2D" parent="ObjectLayer/Mostrador" index="0"]
texture = ExtResource("15_uwlx5")
offset = Vector2(0, -250)

[node name="CollisionShape2D" parent="ObjectLayer/Mostrador/StaticBody2D" index="0"]
position = Vector2(4, -75)
shape = SubResource("RectangleShape2D_6gu64")

[node name="Refris" parent="ObjectLayer" instance=ExtResource("12_a386o")]
position = Vector2(-769, 831)

[node name="Sprite2D" parent="ObjectLayer/Refris" index="0"]
texture = ExtResource("16_ste32")
offset = Vector2(0, -286)

[node name="CollisionPolygon2D" parent="ObjectLayer/Refris/StaticBody2D" index="1"]
polygon = PackedVector2Array(220, -9, 220, -85, -171, -123, -251, -73, -251, -1)

[node name="EnemiesLayer" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("11_ste32")

[node name="SpawnsLayer" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("12_6gu64")

[node name="DefaultMarker" type="Marker2D" parent="SpawnsLayer"]
position = Vector2(-164, 401)

[node name="EntradaTiendaMapa1" type="Marker2D" parent="SpawnsLayer"]
position = Vector2(-311, 670)

[node name="SavesLayer" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("13_6ilwc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("14_0l4aq")]

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource("16_gr4pc")]

[node name="NotificationCenter" parent="CanvasLayer" instance=ExtResource("18_nx65v")]

[node name="AddNewCharacterAnimation" parent="CanvasLayer" instance=ExtResource("20_ucrcn")]

[node name="AddNewItemAnimation" parent="CanvasLayer" instance=ExtResource("22_vlyug")]

[node name="BlackRect" parent="CanvasLayer" instance=ExtResource("24_0u5lt")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CameraManager" parent="." instance=ExtResource("25_sgy6q")]

[node name="Camera2D" parent="CameraManager" index="0"]
physics_interpolation_mode = 1
position = Vector2(0, -7.99994)
process_callback = 0
limit_left = -2559
limit_top = -1761
limit_right = 2548
limit_bottom = 2334

[node name="CameraCollision" parent="CameraManager/AreasLimits/CameraLimit" index="0"]
position = Vector2(3.5, -182)
shape = SubResource("RectangleShape2D_m2kmg")

[node name="PhantomCamera2D" parent="CameraManager/PhantomCameras" index="0" node_paths=PackedStringArray("follow_target")]
position = Vector2(0, -7.99994)
follow_target = NodePath("../../../PlayableCharacter")
limit_target = NodePath("../../AreasLimits/CameraLimit/CameraCollision")

[editable path="ObjectLayer/Maquinas"]
[editable path="ObjectLayer/Mesa"]
[editable path="ObjectLayer/Mostrador"]
[editable path="ObjectLayer/Refris"]
[editable path="CameraManager"]
